--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
+    "next-cloudinary": "^4.18.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
